--- a/style.css
+++ b/style.css
@@ -155,11 +155,61 @@ hr {
 /* 1200px and above */
 @media screen and (min-width: 1200px) {
   .logo {
-    font-size: 2rem;
+    font-size: 3rem;
   }
   
   .logo-dev {
-    font-size: 4rem;
+    font-size: 6rem;
+  }
+
+  .bar {
+    width: 80px;
+    height: 3px;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+  
+  .bar:last-of-type {
+    width: 40px;
+  }
+  
+  h2 {
+    font-size: 3rem;
+  }
+  
+  .eyes-section {
+    margin-bottom: -20px;
+  }
+  
+  .eyes-text {
+    margin-bottom: 0;
+    text-align: left;
+    vertical-align: baseline;
+  }  
+  .name {
+    font-size: 6rem;
+  }
+}
+
+/* 1400px and above */
+@media screen and (min-width: 1400px) {
+  .logo {
+    font-size: 3rem;
+  }
+  
+  .logo-dev {
+    font-size: 6rem;
+  }
+
+  .bar {
+    width: 80px;
+    height: 3px;
+    margin-top: 10px;
+    margin-left: 0;
+  }
+  
+  .bar:last-of-type {
+    width: 40px;
   }
   
   h2 {
@@ -176,6 +226,6 @@ hr {
     vertical-align: baseline;
   }  
   .name {
-    font-size: 6.2rem;
+    font-size: 7.3rem;
   }
 }
