--- a/style.css
+++ b/style.css
@@ -107,6 +107,10 @@ a {
   border-radius: 0 0 30px 30px;
 }
 
+.mouth-img {
+  border-radius: 30px 0 30px 0;
+}
+
 h2 {
   font-family: 'Amatic SC', cursive;
 }
