--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ h2 {
   }
 
   hr {
-    margin: 16px;
+    margin: 16px 0;
   }
 
   .eyes-text {
@@ -241,8 +241,6 @@ h2 {
   
   .eyes-text {
     margin-bottom: 0;
-    text-align: left;
-    vertical-align: baseline;
   }  
   .name {
     font-size: 6.5rem;
@@ -250,6 +248,20 @@ h2 {
 
   .webdev {
     font-size: 6.5rem;
+  }
+
+  .said {
+    font-size: 2.2rem;
+    line-height: 2.5rem;
+  }
+
+  .word-of-text {
+    font-size: 3rem;
+  }
+
+  .number-one {
+    font-size: 12rem;
+    margin-bottom: -45px;
   }
 }
 
@@ -275,7 +287,7 @@ h2 {
   }
   
   .eyes-section {
-    margin-bottom: -18px;
+    margin-bottom: -25px;
   }
   
   .eyes-text {
@@ -284,6 +296,23 @@ h2 {
     vertical-align: baseline;
   }  
   .name {
-    font-size: 7.3rem;
+    font-size: 7.8rem;
+  }
+
+  .nose-section {
+    margin-bottom: -30px;
+  }
+
+  .webdev {
+    font-size: 7.8rem;
+  }
+
+  .it-is-said-text {
+    margin-bottom: 10px;
+  }
+
+  .number-one {
+    font-size: 14rem;
+    margin-bottom: -67px;
   }
 }
