--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 font-family: 'Modak', cursive; */
 
 /* Header Section */
+body {
+  background-color: black;
+}
 
 .logo {
   font-family: 'Amatic SC', cursive;
