--- a/style.css
+++ b/style.css
@@ -4,6 +4,45 @@ font-family: 'Modak', cursive; */
 /* Header Section */
 body {
   background-color: black;
+  animation-name: fade-out;
+  animation-duration: 4s;
+  animation-fill-mode: forwards;
+}
+
+.container {
+  opacity: 0;
+  animation-name: fade-in;
+  animation-duration: 3s;
+  animation-delay: 4s;
+  animation-fill-mode: forwards;
+}
+
+@keyframes fade-out {
+  0% {
+    background-color: black;
+  }
+
+  50% {
+    background-color: black;
+  }
+
+  100% {
+    background-color: white;
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  25% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 .logo {
