--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,3 @@
-/* font-family: 'Amatic SC', cursive;
-font-family: 'Modak', cursive; */
-
-/* Header Section */
-
 /* Fonts */
 
 .logo,
@@ -161,173 +156,13 @@ hr:nth-of-type(2) {
 
 /* Media queries */
 /* 768px and above */
-@media screen and (min-width: 768px) {
-  .it-is-said-text {
-    margin-bottom: -30px;
-  }
-
-  .name {
-    font-size: 3.8rem;
-  }
-
-  .webdev {
-    font-size: 3.5rem;
-  }
-}
+@import "768px";
 
 /* 992px and above */
-@media screen and (min-width: 992px) {
-  .eyes-section {
-    margin-bottom: -18px;
-  }
-
-  .nose-section {
-    margin-bottom: -18px;
-  }
-
-  hr {
-    margin: 16px 0;
-  }
-
-  .eyes-text {
-    margin-bottom: 0;
-  }
-
-  .word-of-text {
-    font-size: 2rem;
-  }
-
-  .said {
-    font-size: 1.5rem;
-    margin-bottom: -8px;
-  }
-
-  .name {
-    font-size: 5.4rem;
-  }
-
-  .webdev {
-    font-size: 5.3rem;
-  }
-
-  .good-one {
-    margin-bottom: -14px;
-  }
-
-  .number-one {
-    font-size: 10rem;
-    margin-bottom: -45px;
-  }
-}
+@import "992px";
 
 /* 1200px and above */
-@media screen and (min-width: 1200px) {
-  .logo {
-    font-size: 3rem;
-  }
-
-  .logo-dev {
-    font-size: 6rem;
-  }
-
-  .hamburger.active .bar:nth-child(1) {
-    width: 40px;
-    transform: translateY(10px) rotate(45deg);
-  }
-
-  .hamburger.active .bar:nth-child(2) {
-    transform: translateY(-4px) translateX(-27px) rotate(-45deg);
-  }
-
-  .bar {
-    width: 80px;
-    height: 3px;
-    margin-top: 10px;
-    margin-left: 0;
-  }
-
-  .bar:last-of-type {
-    width: 40px;
-  }
-
-  .eyes-section {
-    margin-bottom: -20px;
-  }
-
-  .eyes-text {
-    margin-bottom: 0;
-  }
-  .name {
-    font-size: 6.5rem;
-  }
-
-  .webdev {
-    font-size: 6.5rem;
-  }
-
-  .said {
-    font-size: 2.2rem;
-    line-height: 2.5rem;
-  }
-
-  .word-of-text {
-    font-size: 3rem;
-  }
-
-  .number-one {
-    font-size: 12rem;
-    margin-bottom: -45px;
-  }
-}
+@import "1200px";
 
 /* 1400px and above */
-@media screen and (min-width: 1400px) {
-  .logo {
-    font-size: 3rem;
-  }
-
-  .logo-dev {
-    font-size: 6rem;
-  }
-
-  .bar {
-    width: 80px;
-    height: 3px;
-    margin-top: 10px;
-    margin-left: 0;
-  }
-
-  .bar:last-of-type {
-    width: 40px;
-  }
-
-  .eyes-section {
-    margin-bottom: -25px;
-  }
-
-  .eyes-text {
-    margin-bottom: 0;
-    text-align: left;
-    vertical-align: baseline;
-  }
-  .name {
-    font-size: 7.8rem;
-  }
-
-  .nose-section {
-    margin-bottom: -30px;
-  }
-
-  .webdev {
-    font-size: 7.8rem;
-  }
-
-  .it-is-said-text {
-    margin-bottom: 10px;
-  }
-
-  .number-one {
-    font-size: 14rem;
-    margin-bottom: -67px;
-  }
-}
+@import "1400px";
