--- a/style.scss
+++ b/style.scss
@@ -36,123 +36,11 @@ h2 {
   color: black;
 }
 
-.logo {
-  font-size: 1.5rem;
-  text-align: left;
-}
+/* Navbar */
+@import "navbar";
 
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-.hamburger {
-  cursor: pointer;
-}
-
-.hamburger.active .bar:nth-child(1) {
-  width: 20px;
-  transform: translateY(3px) rotate(45deg);
-}
-
-.hamburger.active .bar:nth-child(2) {
-  transform: translateY(-4px) translateX(-14px) rotate(-45deg);
-}
-
-.bar {
-  display: block;
-  width: 40px;
-  height: 2px;
-  margin-top: 5px;
-  margin-left: 0;
-  -webkit-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  background-color: #101010;
-}
-
-.bar:last-of-type {
-  width: 20px;
-}
-
-.nav-menu {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: fixed;
-  top: -100%;
-  left: 0;
-  padding-left: 0;
-  flex-direction: column;
-  width: 100%;
-  text-align: center;
-  transition: 1s ease-in-out;
-}
-
-.nav-menu.active {
-  top: 100px;
-  padding-left: 0;
-  left: 0;
-  transition: 1s ease-in-out;
-}
-
-.nav-link {
-  font-size: 2rem;
-}
-
-.nav-link:hover {
-  color: #9b9aa0;
-}
-
-.nav-item {
-  margin: 10px;
-}
-
-#home.active {
-  margin-top: 344px;
-  transition: 1s ease-in-out;
-}
-
-#home {
-  margin-top: 0;
-  transition: 1s ease-in-out;
-}
-
-hr {
-  margin: 0;
-}
-
-hr:nth-of-type(2) {
-  margin-top: 16px;
-  margin-bottom: 8px;
-}
 /* Home Section */
-
-.eyes-img {
-  border-radius: 0 30px 0 30px;
-}
-
-.nose-img {
-  border-radius: 0 0 30px 30px;
-}
-
-.mouth-img {
-  border-radius: 30px 0 30px 0;
-}
-
-.word-of-text {
-  font-size: 2.5rem;
-}
-
-.number-character {
-  font-size: 4rem;
-}
-
-.number-one {
-  font-size: 6rem;
-}
+@import "home";
 
 /* Media queries */
 /* 768px and above */
